--- a/templates/add.html
+++ b/templates/add.html
@@ -1,36 +1,58 @@
 {% extends 'flatpages/default.html' %}
-{% load static %}
 {% load custom_filters %}
 
-{% block idpage %}news{% endblock %}
-
 {% block title %}
-Добавление
-{% endblock %}
-
-{% block header %}
-Добавление новой публикации
-{% endblock %}
-
-{% block count %}
-<br>
-{% endblock %}
-
-{% block image %}
-{% static 'assets/new.jpg' %}
-{% endblock %}
-
-{% block form %}
-    <!-- Форма для добавления -->
-    <form method="post" name="add">
-        {% csrf_token %}
-        {{ form }}
-        <div class="btn-form">
-            <input class="btn-btn" type="submit" value="Сохранить пост">
-            <input class="btn-btn" type="button" onclick="history.back();" value="Отмена">
-        </div>
-    </form>
-{% endblock %}
+    Add
+{% endblock title %}
 
 {% block content %}
-{% endblock %}
+
+    <div>
+      </br>
+      <h3>Новая публикация</h3>
+    </div>
+        <form method="POST">
+        {% csrf_token %}
+        <div>
+            <label for="author" class="form-label">Автор:</label>
+            <select id="author" name="author" required>
+                <option selected disabled value="">выбор</option>
+                {% for author in authors %}
+                    <option value="{{ author.authorUser_id }}">{{ author.authorUser }}</option>
+                {% endfor %}
+            </select>
+            </br>
+            <label for="post_type" class="form-label">Тип публикации:</label>
+            <select id="post_type" name="post_type" required>
+                <option selected disabled value="NW">Новость</option>
+                <option value="AR">Статья</option>
+                <option value="NW">Новость</option>
+            </select>
+            </br>
+            <label for="category" class="form-label">Категория:</label>
+            <select id="category" name="category" required>
+                <option selected disabled value="">выбор</option>
+                {% for category in categories %}
+                    <option value="{{ category.name }}">{{ category.name }}</option>
+                {% endfor %}
+            </select>
+            </br>
+
+            <label for="title" class="form-label">Название:</label>
+            <input type="text" class="form-control" name="title" id="title" maxlength="255" required>
+            </br>
+            <label for="content" class="form-label">Содержание:</label>
+         </div>
+            <div style="float:left; width:100%; height:420px; line-height:400px">
+<!--            <textarea class="form-control" style="height:600px" name="content" id="content" onkeydown="if(event.keyCode==13){return false;}" required>-->
+                <textarea class="form-control" style="height:400px" name="content" id="content" required></textarea>
+            </div>
+            </br>
+            </br>
+            </br>
+            <button type="submit" class="btn btn-secondary">Создать</button>
+            </form>
+
+
+
+{% endblock content %}
