--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,87 +1,73 @@
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>{% block title %}{% endblock title %} | NewsPaper</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/mystyles.css' %}" rel="stylesheet" />
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>News Portal— {% block title %} {% endblock title %}</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+
 </head>
 
-<body data-id-page="{% block idpage %}{% endblock %}">
-    <div class="wrapper">
+<body>
 
-        <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="{#{% url 'home' %}#}">NewsPaper</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation"><span
-                        class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="{#{% url 'home' %}#}" data-id-nav="home">Главная</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/news/" data-id-nav="news">Новости</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/about/" data-id-nav="about">О нас</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contacts/" data-id-nav="contacts">Контакты</a></li>
-                        <li class="nav-item"><a class="nav-link nav-user" href="/">{{request.user.username}}</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Page content-->
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-lg-8 row-widht">
-                    <!-- Post content-->
-                    <article>
-                        <!-- Post header-->
-                        <header class="mb-4 header-hr">
-                            <!-- Post title-->
-                            <h1 class="fw-bolder mb-1">{% block header %}{% endblock %}</h1>
-                            <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">{% block count %}{% endblock %}</div>
-                        </header>
-                        <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="{% block image %}{% endblock image %}"
-                                alt="..." /></figure>
-                        <!-- Post content-->
-                        <section class="mb-5 post-content">
-                            <div class="btn-box">
-                                <a class="mb-4 btn search-btn" href="{% url 'search' %}">Поиск новостей</a>
-                                <a class="mb-4 btn add-btn" href="{% url 'add' %}">Добавить новость</a>
-                            </div>
-                            <p class="fs-5 mb-4"></p>
-                            {% block form %}{% endblock %}
-                            {% block content %}{% endblock %}
-                            <p></p>
-                        </section>
-                    </article>
-                </div>
-            </div>
-        </div>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark footer">
-            <div class="container">
-                <p class="m-0 text-center text-white">Copyright &copy; Alex1121 2023</p>
-            </div>
-        </footer>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">News Portal by Alexey Erastov (homework for SkillFactory)</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/news">News
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/news/search">Search</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/news/add">Add</a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+              <a class="nav-link" href="/sign/account/">Profile</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+              <a class="nav-link" href="/account/login/">Sign Up/In</a>
+          </li>
+          {% endif %}
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="{% static 'js/scripts.js' %}"></script>
+  <!-- Page Content -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+       {% block content %}
+       {{ flatpage.content }}
+       {% endblock content %}
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="{% static 'vendor/jquery/jquery.slim.min.js' %}"></script>
+  <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
 </body>
 
 </html>
+
